Fixed margin on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -368,6 +368,7 @@ main:nth-of-type(2)>div:nth-of-type(6) p {
 main:nth-of-type(2)>div:nth-of-type(6) a {
   display: inline-block;
   width: 120px;
+  margin: 2px 0;
   padding: 15px;
   background: #24292e;
   color: #f0f0f0;
